--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 #bg {
-  background-image: url('./images/login.png');
+  background-image: url('images/login.png');
   position: fixed;
   left: 0;
   top: 0;
@@ -12,6 +12,15 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+#aboutme {
+  margin-left: 30px;
+}
+
+#profiletable {
+  margin-top: 10px;
+  margin-left: 15px;
 }
 
 #forget {
