--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 body {
+  color: #40514E;
+  margin: 0;
+  text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -15,12 +18,20 @@ body {
 }
 
 #aboutme {
-  margin-left: 30px;
+  width: 50%;
+  margin: auto;
+}
+
+#experience {
+  text-align:left;
+  margin:auto;
+  width: 50%;
 }
 
 #profiletable {
-  margin-top: 10px;
-  margin-left: 15px;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #forget {
@@ -28,31 +39,138 @@ body {
 }
 
 h1 {
-  padding-top: 2%;
-  color: black;
-  padding-bottom: 2rem;
+  color: #66BFBF;
+  font-size: 5rem;
+  margin: 50px auto 25px auto;
   font-weight: bold;
+  font-family: 'Sacramento', cursive;
 }
+
+h2 {
+  color: #66BFBF;
+  font-family: 'Arial', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+  padding-bottom: 10px;
+}
+
+h3 {
+  color: #11999E;
+  font-family: 'Arial', sans-serif;
+}
+
+p {
+  line-height: 2;
+}
+
+hr {
+  border: dotted black 6px;
+  border-bottom: none;
+  width: 5%;
+  margin: 50px auto;
+}
+
+.top-container {
+  background-color: #E4F9F5;
+  position: relative;
+  padding-top: 100px;
+}
+
+.middle-container {
+  margin: 100px 0;
+}
+
+.bottom-container {
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 50px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+.experience-image {
+  width: 15%;
+  float: left;
+}
+
+.skills-image {
+  width: 20%;
+  float: right;
+}
+
+.intro {
+  width: 30%;
+  margin: auto;
+}
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
 a {
   color: #333;
-}
-a:hover {
-  color: #26e2e8;
   text-decoration: none;
 }
+
+a:hover {
+  color: #11cdd4;
+  text-decoration: none;
+}
+
 .form-control:focus {
   color: #000;
   background-color: #fff;
-  border: 2px solid #26e2e8;
+  border: 2px solid #11cdd4;
   outline: 0;
   box-shadow: none;
 }
 
-.btn {
-  background: #26e2e8;
-  border: #26e2e8;
+.footer-link {
+  color: #333;
+  margin: 10px 20px;
+  text-decoration: none;
 }
+
+.footer-link:hover {
+  color:#E4F9F5;
+  text-decoration: none;
+}
+
+.copyright {
+  color: #E4F9F5;
+  padding: 10px;
+}
+
+.btn {
+  background: #11cdd4;
+  border: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 13;
+  -moz-border-radius: 13;
+  border-radius: 13px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
 .btn:hover {
-  background: #26e2e8;
-  border: #26e2e8;
+  background: #30e3cb;
+  border: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
 }
